--- a/demo-covid.ipynb
+++ b/demo-covid.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lab_black extension is already loaded. To reload it, use:\n",
+      "  %reload_ext lab_black\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext lab_black\n",
     "%matplotlib inline"
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +43,7 @@
     "import requests\n",
     "import zipfile\n",
     "import io\n",
-    "from datetime import timedelta, date\n",
+    "import datetime\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +73,7 @@
     "filter_dep = [\"971\", \"972\", \"973\", \"974\", \"976\"]  # only metropolitan France\n",
     "figsize = (15, 15)\n",
     "tile_zoom = 7\n",
-    "frame_duration = 500  # in ms"
+    "frame_duration = 50  # in ms"
    ]
   },
   {
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +156,7 @@
     "        \"right\", size=\"5%\", pad=0.1\n",
     "    )  # GeoPandas trick to adjust the legend bar\n",
     "    gdf_3857.plot(\n",
-    "        column=\"hosp\",  # Number of people currently hospitalized\n",
+    "        column=\"tx\",  # taux d'hospitalisation\n",
     "        ax=ax,\n",
     "        cax=cax,\n",
     "        alpha=0.75,\n",
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +227,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>2020-03-18</td>\n",
+       "      <th>2020-03-18</th>\n",
        "      <td>01</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
@@ -227,7 +236,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2020-03-18</td>\n",
+       "      <th>2020-03-18</th>\n",
        "      <td>02</td>\n",
        "      <td>0</td>\n",
        "      <td>41</td>\n",
@@ -236,7 +245,7 @@
        "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2020-03-18</td>\n",
+       "      <th>2020-03-18</th>\n",
        "      <td>03</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
@@ -245,7 +254,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2020-03-18</td>\n",
+       "      <th>2020-03-18</th>\n",
        "      <td>04</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
@@ -254,7 +263,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2020-03-18</td>\n",
+       "      <th>2020-03-18</th>\n",
        "      <td>05</td>\n",
        "      <td>0</td>\n",
        "      <td>8</td>\n",
@@ -276,7 +285,7 @@
        "2020-03-18  05     0     8    1    9   0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,6 +299,323 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "popf = pd.read_csv(\"popf2018.csv\", sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Code Département</th>\n",
+       "      <th>Département</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>geom</th>\n",
+       "      <th>geo_point_2d</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>54</td>\n",
+       "      <td>Meurthe-et-Moselle</td>\n",
+       "      <td>733085</td>\n",
+       "      <td>{\"type\": \"MultiPolygon\", \"coordinates\": [[[[5....</td>\n",
+       "      <td>48.7887573647,6.16184940847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Corrèze</td>\n",
+       "      <td>241891</td>\n",
+       "      <td>{\"type\": \"Polygon\", \"coordinates\": [[[1.649325...</td>\n",
+       "      <td>45.3573040719,1.87758804649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>86</td>\n",
+       "      <td>Vienne</td>\n",
+       "      <td>438136</td>\n",
+       "      <td>{\"type\": \"Polygon\", \"coordinates\": [[[-0.03073...</td>\n",
+       "      <td>46.5648788934,0.459483212125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>61</td>\n",
+       "      <td>Orne</td>\n",
+       "      <td>282516</td>\n",
+       "      <td>{\"type\": \"Polygon\", \"coordinates\": [[[-0.73997...</td>\n",
+       "      <td>48.6230741942,0.127896583869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35</td>\n",
+       "      <td>Ille-et-Vilaine</td>\n",
+       "      <td>1073883</td>\n",
+       "      <td>{\"type\": \"MultiPolygon\", \"coordinates\": [[[[-1...</td>\n",
+       "      <td>48.1550905823,-1.63820610754</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Code Département         Département  Population  \\\n",
+       "0               54  Meurthe-et-Moselle      733085   \n",
+       "1               19             Corrèze      241891   \n",
+       "2               86              Vienne      438136   \n",
+       "3               61                Orne      282516   \n",
+       "4               35     Ille-et-Vilaine     1073883   \n",
+       "\n",
+       "                                                geom  \\\n",
+       "0  {\"type\": \"MultiPolygon\", \"coordinates\": [[[[5....   \n",
+       "1  {\"type\": \"Polygon\", \"coordinates\": [[[1.649325...   \n",
+       "2  {\"type\": \"Polygon\", \"coordinates\": [[[-0.03073...   \n",
+       "3  {\"type\": \"Polygon\", \"coordinates\": [[[-0.73997...   \n",
+       "4  {\"type\": \"MultiPolygon\", \"coordinates\": [[[[-1...   \n",
+       "\n",
+       "                   geo_point_2d  \n",
+       "0   48.7887573647,6.16184940847  \n",
+       "1   45.3573040719,1.87758804649  \n",
+       "2  46.5648788934,0.459483212125  \n",
+       "3  48.6230741942,0.127896583869  \n",
+       "4  48.1550905823,-1.63820610754  "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "popf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cov[\"tx\"] = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ind = 0\n",
+    "for index, row in cov.iterrows():\n",
+    "    dep = row[\"dep\"]\n",
+    "    tx = (\n",
+    "        int(row[\"hosp\"])\n",
+    "        / int(popf.loc[popf[\"Code Département\"] == dep, \"Population\"])\n",
+    "        * 1e6\n",
+    "    )\n",
+    "    cov.iat[ind, 6] = tx\n",
+    "    ind += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dep</th>\n",
+       "      <th>sexe</th>\n",
+       "      <th>hosp</th>\n",
+       "      <th>rea</th>\n",
+       "      <th>rad</th>\n",
+       "      <th>dc</th>\n",
+       "      <th>tx</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>jour</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-03-18</th>\n",
+       "      <td>01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.07856</td>\n",
+       "      <td>POLYGON ((5.25559 45.78459, 5.24813 45.78176, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-18</th>\n",
+       "      <td>02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>11</td>\n",
+       "      <td>76.7379</td>\n",
+       "      <td>POLYGON ((3.48175 48.86640, 3.48144 48.86635, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-18</th>\n",
+       "      <td>03</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.8002</td>\n",
+       "      <td>POLYGON ((2.38613 46.33196, 2.38597 46.33203, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-18</th>\n",
+       "      <td>04</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18.557</td>\n",
+       "      <td>POLYGON ((6.66579 43.83120, 6.66739 43.83119, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-18</th>\n",
+       "      <td>05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.5068</td>\n",
+       "      <td>POLYGON ((6.24158 44.44686, 6.24210 44.44732, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           dep  sexe  hosp  rea  rad  dc       tx  \\\n",
+       "jour                                                \n",
+       "2020-03-18  01     0     2    0    1   0  3.07856   \n",
+       "2020-03-18  02     0    41   10   18  11  76.7379   \n",
+       "2020-03-18  03     0     4    0    1   0  11.8002   \n",
+       "2020-03-18  04     0     3    1    2   0   18.557   \n",
+       "2020-03-18  05     0     8    1    9   0  56.5068   \n",
+       "\n",
+       "                                                     geometry  \n",
+       "jour                                                           \n",
+       "2020-03-18  POLYGON ((5.25559 45.78459, 5.24813 45.78176, ...  \n",
+       "2020-03-18  POLYGON ((3.48175 48.86640, 3.48144 48.86635, ...  \n",
+       "2020-03-18  POLYGON ((2.38613 46.33196, 2.38597 46.33203, ...  \n",
+       "2020-03-18  POLYGON ((6.66579 43.83120, 6.66739 43.83119, ...  \n",
+       "2020-03-18  POLYGON ((6.24158 44.44686, 6.24210 44.44732, ...  "
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cov[\"tx\"] = cov[\"tx\"].astype(\"float64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dep           object\n",
+       "sexe           int64\n",
+       "hosp           int64\n",
+       "rea            int64\n",
+       "rad            int64\n",
+       "dc             int64\n",
+       "tx           float64\n",
+       "geometry    geometry\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov.dtypes"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -298,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,12 +658,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vmax = cov.hosp.max()\n",
-    "for i, dt in enumerate(daterange(cov.index.min(), cov.index.max())):\n",
+    "datedeb = datetime.datetime(2020, 6, 17)\n",
+    "vmax = cov[datedeb:].tx.max()\n",
+    "for i, dt in enumerate(daterange(datedeb, cov.index.max())):\n",
     "    title = dt.strftime(\"%d-%b-%Y\")\n",
     "    df = cov.query(\"jour == @dt\")\n",
     "    df = df.drop_duplicates(subset=[\"dep\"], keep=\"first\")\n",
@@ -354,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -366,14 +693,14 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "frames = []\n",
-    "for i, dt in enumerate(daterange(cov.index.min(), cov.index.max())):\n",
+    "for i, dt in enumerate(daterange(datedeb, cov.index.max())):\n",
     "    name = \"img/\" + str(i) + \".png\"\n",
     "    frames.append(Image.open(name))\n",
     "\n",
@@ -390,6 +717,13 @@
     "\n",
     "HTML(\"<img src='covid.gif'>\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -408,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
