--- a/demo-covid.ipynb
+++ b/demo-covid.ipynb
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The lab_black extension is already loaded. To reload it, use:\n",
-      "  %reload_ext lab_black\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext lab_black\n",
     "%matplotlib inline"
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +34,7 @@
     "import requests\n",
     "import zipfile\n",
     "import io\n",
-    "import datetime\n",
+    "from datetime import timedelta, date, datetime\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
@@ -62,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +276,7 @@
        "2020-03-18  05     0     8    1    9   0"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +399,7 @@
        "4  48.1550905823,-1.63820610754  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -477,11 +468,9 @@
        "      <th>rad</th>\n",
        "      <th>dc</th>\n",
        "      <th>tx</th>\n",
-       "      <th>geometry</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>jour</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -501,7 +490,6 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>3.07856</td>\n",
-       "      <td>POLYGON ((5.25559 45.78459, 5.24813 45.78176, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-18</th>\n",
@@ -512,7 +500,6 @@
        "      <td>18</td>\n",
        "      <td>11</td>\n",
        "      <td>76.7379</td>\n",
-       "      <td>POLYGON ((3.48175 48.86640, 3.48144 48.86635, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-18</th>\n",
@@ -523,7 +510,6 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>11.8002</td>\n",
-       "      <td>POLYGON ((2.38613 46.33196, 2.38597 46.33203, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-18</th>\n",
@@ -534,7 +520,6 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>18.557</td>\n",
-       "      <td>POLYGON ((6.66579 43.83120, 6.66739 43.83119, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-18</th>\n",
@@ -545,31 +530,22 @@
        "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>56.5068</td>\n",
-       "      <td>POLYGON ((6.24158 44.44686, 6.24210 44.44732, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           dep  sexe  hosp  rea  rad  dc       tx  \\\n",
-       "jour                                                \n",
-       "2020-03-18  01     0     2    0    1   0  3.07856   \n",
-       "2020-03-18  02     0    41   10   18  11  76.7379   \n",
-       "2020-03-18  03     0     4    0    1   0  11.8002   \n",
-       "2020-03-18  04     0     3    1    2   0   18.557   \n",
-       "2020-03-18  05     0     8    1    9   0  56.5068   \n",
-       "\n",
-       "                                                     geometry  \n",
-       "jour                                                           \n",
-       "2020-03-18  POLYGON ((5.25559 45.78459, 5.24813 45.78176, ...  \n",
-       "2020-03-18  POLYGON ((3.48175 48.86640, 3.48144 48.86635, ...  \n",
-       "2020-03-18  POLYGON ((2.38613 46.33196, 2.38597 46.33203, ...  \n",
-       "2020-03-18  POLYGON ((6.66579 43.83120, 6.66739 43.83119, ...  \n",
-       "2020-03-18  POLYGON ((6.24158 44.44686, 6.24210 44.44732, ...  "
+       "           dep  sexe  hosp  rea  rad  dc       tx\n",
+       "jour                                             \n",
+       "2020-03-18  01     0     2    0    1   0  3.07856\n",
+       "2020-03-18  02     0    41   10   18  11  76.7379\n",
+       "2020-03-18  03     0     4    0    1   0  11.8002\n",
+       "2020-03-18  04     0     3    1    2   0   18.557\n",
+       "2020-03-18  05     0     8    1    9   0  56.5068"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,24 +565,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dep           object\n",
-       "sexe           int64\n",
-       "hosp           int64\n",
-       "rea            int64\n",
-       "rad            int64\n",
-       "dc             int64\n",
-       "tx           float64\n",
-       "geometry    geometry\n",
+       "dep      object\n",
+       "sexe      int64\n",
+       "hosp      int64\n",
+       "rea       int64\n",
+       "rad       int64\n",
+       "dc        int64\n",
+       "tx      float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,11 +633,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datedeb = datetime.datetime(2020, 6, 17)\n",
+    "datedeb = datetime(2020, 6, 17)\n",
     "vmax = cov[datedeb:].tx.max()\n",
     "for i, dt in enumerate(daterange(datedeb, cov.index.max())):\n",
     "    title = dt.strftime(\"%d-%b-%Y\")\n",
@@ -681,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +668,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
